<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:elevation="2dp">


        <TextView
            android:id="@+id/txt_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginTop="48dp"
            android:padding="2dp"
            android:text="@string/shopname"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_shop_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/shop_address"
            android:textColor="#494949"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_shop_offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/shop_offers"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_shop_timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp"
            android:padding="3dp"
            android:text="@string/shoptiming"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/txt_shop_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="63dp"
            android:text="@string/shop_phone"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />


</android.support.v7.widget.CardView>